# CSC173-Project5-Boolean-Circuits

./: Boolean.c  Boolean.h  CMakeCache.txt  CMakeLists.txt  Circuit.c  Circuit.h  Gates.c  Gates.h  Makefile  Project_5  cmake_install.cmake  main.c  strdup.c  strdup.h
